# cdm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: cdm_schema.yaml  controlled_vocabularies.yaml  data_sources.yaml  mapping_rules.yaml  qa_rules.yaml  runtime.yaml  terminology_mapping_rules.yaml
docs/: Contributor_Onboarding_Guide.md  Data_Dictionary.md  Data_Source_Inventory.md  ETL_Functional_Requirements.md  FAIR_Principles_Alignment.md  Large_Scale_Processing_Design.md  QA_Framework_and_Acceptance_Criteria.md  Role_Alignment.md  Role_Alignment_NYU_Langone.md  Source_to_CDM_Mapping_Spec.md  Terminology_Alignment_and_Gap_Analysis.md
notebooks/: 01_large_source_data_profiling.ipynb  02_mapping_catalog_review.ipynb  03_qa_results_review.ipynb  04_terminology_gap_analysis.ipynb
sql/: create_cdm_tables.sql  qa_summary_queries.sql  source_profile_queries.sql
src/: __init__.py  apply_cdm_mapping.py  build_data_manifest.py  build_mapping_catalog.py  download_public_data.py  generate_reports.py  generate_steward_review_queue.py  infer_schema.py  logging_config.py  profile_source_data.py  run_qa_checks.py  terminology_matcher.py  utils.py  validate_cdm_schema.py
tests/: test_lineage.py  test_manifest.py  test_mapping_logic.py  test_pipeline_integration.py  test_qa_checks.py  test_schema_inference.py  test_schema_validator.py  test_steward_queue.py  test_study.py  test_terminology_matcher.py
